Routing in place

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,18 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.css" rel="stylesheet">
   <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+  <style>
+	  /* https://material.io/color/ */
+    :root {
+	    --mdc-theme-primary: #00acc1;
+	    --mdc-theme-primary-light: #5ddef4;
+	    --mdc-theme-primary-dark: #007c91;
+	    --mdc-theme-secondary: #d81b60;
+	    --mdc-theme-secondary-light: #ff5c8d;
+	    --mdc-theme-secondary-dark: #a00037;
+	    
+    }
+  </style>
 </head>
 
 <body>
