--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
 		/* https://material.io/color/ */
 
 		:root {
-			--mdc-theme-primary: #00acc1;
-			--mdc-theme-primary-light: #5ddef4;
-			--mdc-theme-primary-dark: #007c91;
-			--mdc-theme-secondary: #d81b60;
-			--mdc-theme-secondary-light: #ff5c8d;
-			--mdc-theme-secondary-dark: #a00037;
+			--mdc-theme-primary: #ffca28;
+			--mdc-theme-primary-light: #fffd61;
+			--mdc-theme-primary-dark: #c79a00;
+			--mdc-theme-secondary: #66aeed;
+			--mdc-theme-secondary-light: #9ce0ff;
+			--mdc-theme-secondary-dark: #297fba;
 		}
 
 		body {
