Reworking the left drawer

--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,15 @@
 			--mdc-theme-secondary: #66aeed;
 			--mdc-theme-secondary-light: #9ce0ff;
 			--mdc-theme-secondary-dark: #297fba;
+
+			--mdc-theme-gray: #999;
 		}
 
 		body {
 			margin: 0;
 		}
 	</style>
+	<link rel="stylesheet" href="/style.css">
 	<script src="environments/environment.js"></script>
 	<script>
 		firebase.initializeApp(environment.firebase);
