--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,15 @@
 	<link rel="shortcut icon" href="assets/favicon.ico">
 
 	<title>React App</title>
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.css" rel="stylesheet">
-	<script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+	<!-- 
+		CHALLENGE Firestore
+		Add Firestore client library. It's a separate script tag, at least while it's in beta.
+	-->
+	<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-firestore.js"></script>
 	<style>
 		/* https://material.io/color/ */
 
@@ -25,7 +30,9 @@
 			--mdc-theme-secondary-light: #9ce0ff;
 			--mdc-theme-secondary-dark: #297fba;
 
-			--mdc-theme-gray: #999;
+			--colors-text: #555;
+			--colors-gray: #999;
+			--colors-white: #FFF;
 		}
 
 		body {
