--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta name="theme-color" content="#000000">
 
 	<link rel="manifest" href="/manifest.json">
-	<link rel="shortcut icon" href="assets/favicon.ico">
+	<link rel="shortcut icon" href="/assets/favicon.ico">
 
 	<title>React App</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,900" rel="stylesheet">
@@ -40,7 +40,7 @@
 		}
 	</style>
 	<link rel="stylesheet" href="/style.css">
-	<script src="environments/environment.js"></script>
+	<script src="/environments/environment.js"></script>
 	<script>
 		firebase.initializeApp(environment.firebase);
 	</script>
