challenge firestore prompts

--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,16 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.css" rel="stylesheet">
-	<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+
 	<!-- 
-		CHALLENGE Firestore
-		Add Firestore client library. It's a separate script tag, at least while it's in beta.
+		CHALLENGE Firestore 01
+		- See https://firebase.google.com/docs/firestore/quickstart
+		- Update the script tag for firebase.js to the latest version. It's currently 4.12.1.
+		- If necessary, add a script tag for the Firestore client library (firebase-firestore.js). 
+		- Firestore requires a separate script tag while it's in beta.
 	-->
-	<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-firestore.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+	
 	<style>
 		/* https://material.io/color/ */
 
