--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 		- Firestore requires a separate script tag while it's in beta.
 	-->
 	<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/4.12.1/firebase-firestore.js"></script>
 	
 	<style>
 		/* https://material.io/color/ */
